tests/corpus/negative/N04-dictionary/source.py
def mapping():
    values = {"one": 1}
    return values

